ajuste de arquivos pra poder trabalhar de casa