@@ -1,8 +1,4 @@
-<<<<<<< HEAD
-
-=======
 package trimestre2.EX1;
->>>>>>> main
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Scanner;
@@ -17,34 +13,20 @@ public class Estudante {
         this.notas = new ArrayList<>();
     }
 
-    public void insereNotas(){
-<<<<<<< HEAD
-        for(Integer i=0;i<=5;i++){
-            System.out.println("Insira a nota "+(i+1)+" do aluno "+ this.nome +":");
-            Double nota = scanner.nextDouble();
-            this.notas.add(nota);
-=======
-        if(this.notas.size()>4){
+    public void insereNotas() {
+        if (this.notas.size() > 4) {
             System.out.println("As notas já foram preenchidas para esse aluno");
-        }
-        else{
-            for(Integer i=0;i<=this.notas.size();i++){
-                System.out.println("Insira a nota "+(i+1)+" do aluno "+ this.nome +":");
-                Double nota = scanner.nextDouble();
-                this.notas.add(nota);
+        } else {
+            for (int i = 0; i <= this.notas.size(); i++) {
+                System.out.println("Insira a nota " + (i + 1) + " do aluno " + this.nome + ":");
+                    Double nota = scanner.nextDouble();this.notas.add(nota);
             }
->>>>>>> main
         }
     }
 
     public Double calculaMedia(){
-<<<<<<< HEAD
-        Double media=(this.notas.get(0)+this.notas.get(1)+this.notas.get(2)+this.notas.get(3)+this.notas.get(4))/5.0;
-        return media;
-    }
-=======
         Double soma = 0.0;
-        for(Integer i=0;i<=this.notas.size();i++){
+        for(int i=0;i<=this.notas.size();i++){
             soma+=this.notas.get(i);
         }
         Double media=soma/this.notas.size();
@@ -52,8 +34,8 @@ public class Estudante {
     }
 
     public Double menorNota(){
-        Double menor = this.notas.get(0);
-        for(Integer i=1;i<=this.notas.size();i++){
+        Double menor = this.notas.getFirst();
+        for(int i=1;i<=this.notas.size();i++){
             if (this.notas.get(i)<menor) {
                 menor = this.notas.get(i);
             }
@@ -67,10 +49,9 @@ public class Estudante {
 
     public String getNotas(){
         String str_notas="Notas do(a) "+(this.nome)+": ";
-        for(Integer i=0;i<=this.notas.size();i++){
+        for(int i=0;i<=this.notas.size();i++){
             str_notas+="\nNota "+(i+1)+": "+(this.notas.get(i));
         }
         return str_notas;
     }
->>>>>>> main
 }
